--- a/Software/web/centro_distribuicao.xhtml
+++ b/Software/web/centro_distribuicao.xhtml
@@ -19,21 +19,35 @@
                     <p:growl id="formMessage" showDetail="true" autoUpdate="true" />
                     <p:commandButton value="Inluir" action="#{beanCentroDistribuicao.insert()}" update="frm-centro" oncomplete="PF('dlg').show();" icon="ui-icon-extlink" ignoreAutoUpdate="true" />
                     <p:dialog id="dlg" widgetVar="dlg" focus="nome" header="Centro de Distribuição" modal="true" closable="false" showEffect="fade" hideEffect="fade" >
-                        <h:panelGrid columns="2">
-                            <h:outputText value="ID:" />
-                            <p:inputText class="ui-state-disabled" id="id" value="#{beanCentroDistribuicao.entity.id}" />
-
-                            <h:outputText value="Nome:" />
-                            <p:inputText required="true" requiredMessage="Campo Nome é Obrigatório!" id="nome" value="#{beanCentroDistribuicao.entity.nome}" />
-
-                            <h:outputText value="Endereço:" />
-                            <p:inputText required="true" requiredMessage="Campo Endereço é Obrigatório!" value="#{beanCentroDistribuicao.entity.endereco.descricao}" />
-
+                        <p:panelGrid style="border-style: none">
                             <h:inputHidden id="latitude" value="#{beanCentroDistribuicao.entity.endereco.latitude}" />
-                            <h:inputHidden id="longitude" value="#{beanCentroDistribuicao.entity.endereco.longitude}"/>
-                        </h:panelGrid>
+                            <h:inputHidden id="longitude" value="#{beanCentroDistribuicao.entity.endereco.longitude}" />
+
+                            <p:row style="border-style: none;">
+                                <p:column style="border-style: none; text-align: right;"><h:outputText value="ID:" /></p:column>
+                                <p:column style="border-style: none" colspan="2"><p:inputText class="ui-state-disabled" id="id" value="#{beanCentroDistribuicao.entity.id}" /></p:column>
+                            </p:row>
+
+                            <p:row style="border-style: none;">
+                                <p:column style="border-style: none; text-align: right;"><h:outputText value="Nome:" /></p:column>
+                                <p:column style="border-style: none" colspan="2"><p:inputText required="true" requiredMessage="Campo Nome é Obrigatório!" id="nome" value="#{beanCentroDistribuicao.entity.nome}" /></p:column>
+                            </p:row>
+
+                            <p:row style="border-style: none;">
+                                <p:column style="border-style: none; text-align: right;"><h:outputText value="Endereço:" /></p:column>
+                                <p:column style="border-style: none"><p:inputText required="true" requiredMessage="Campo Endereço é Obrigatório!" value="#{beanCentroDistribuicao.entity.endereco.descricao}" id="endereco" /></p:column>
+                                <p:column style="border-style: none"><p:commandButton value="Buscar" icon="ui-icon-search" onclick="geocode()" type="button" /></p:column>
+                            </p:row>
+                        </p:panelGrid>
+                        <script type="text/javascript">
+                            function geocode() {
+                                PF('geoMap').geocode(document.getElementById('frm-centro:endereco').value);
+                            }
+                        </script>
                         <p:gmap id="geoGmap" widgetVar="geoMap" center="#{beanCentroDistribuicao.centroMapa}" zoom="15" type="ROADMAP" model="#{beanCentroDistribuicao.geoModel}" style="width:500px; height:300px">
-                            <p:ajax event="pointSelect" listener="#{beanCentroDistribuicao.onPointSelect}" update="formMessage geoGmap" />
+                            <p:ajax event="pointSelect" listener="#{beanCentroDistribuicao.onPointSelect}" update="formMessage geoGmap latitude longitude endereco" />
+                            <p:ajax event="geocode" listener="#{beanCentroDistribuicao.onGeocode}" update="formMessage geoGmap latitude longitude endereco" />
+
                         </p:gmap>
                         <hr />
                         <h:panelGrid columns="2">
@@ -60,7 +74,6 @@
                         <f:facet name="header">Ações</f:facet>
                         <h:form>
                             <p:commandButton value="Editar" class="btn-editar" action="#{beanCentroDistribuicao.change()}" update="gridCentroDistribuicao frm-centro"/>
-                            <script src="resources/js/core/editar.js" type="text/javascript"></script>
                             <p:commandButton value="Excluir" action="#{beanCentroDistribuicao.delete()}" update="gridCentroDistribuicao"/>
                         </h:form>
                     </p:column>
