--- a/Software/web/oferecer.xhtml
+++ b/Software/web/oferecer.xhtml
@@ -17,7 +17,7 @@
             </ui:define>
             <ui:define name="conteudo">
                 <h:form id="frm-oferecer">
-                    <p:growl id="growl" autoUpdate="true" />
+                    <p:growl id="growl" autoUpdate="true" showDetail="true"/>
                     <p:commandButton value="Incluir"  oncomplete="PF('dlg').show();" icon="ui-icon-extlink" ignoreAutoUpdate="true" class="padding-bottom-style" />
                     <h:form> 
                         <p:dataTable var="produto" value="#{oferecerBean.produtos}">
@@ -43,9 +43,9 @@
                         </h:panelGrid>
                         <h:panelGrid columns="2" id="input">
                             <p:outputLabel for="cats" value="Categoria: " />
-                            <p:selectOneMenu id="cats" value="#{oferecerBean.cadastrando.categoria}" converter="categoriac">
-                                <f:selectItem itemLabel="Selecione um" itemValue="" />
-                                <f:selectItems var="cat" value="#{oferecerBean.categoriasAtuais}"  itemValue="#{cat}" />
+                            <p:selectOneMenu id="cats" value="#{oferecerBean.cadastrando.categoria}" converter="categoriaConverter">
+                                <f:selectItem itemLabel="Selecione uma Categoria" itemValue="0" />
+                                <f:selectItems var="cat" value="#{oferecerBean.categoriasAtuais}" itemLabel="#{cat.descricao}"  itemValue="#{cat}" />
                             </p:selectOneMenu>
                             <p:outputLabel value="Descrição:"/>
                             <p:inputText id="input-descricao" value="#{oferecerBean.cadastrando.descricao}" 	required="true"
