--- a/Software/web/oferecer.xhtml
+++ b/Software/web/oferecer.xhtml
@@ -16,7 +16,7 @@
                 Bem-vindo!
             </ui:define>
             <ui:define name="conteudo">
-                <h:form id="frm-oferecer">
+                <h:form id="frm-oferecer" binding="#{oferecerBean.form}">
                     <p:growl id="growl" autoUpdate="true" showDetail="true"/>
                     <p:commandButton value="Incluir"  oncomplete="PF('dlg').show();" icon="ui-icon-extlink" ignoreAutoUpdate="true" class="padding-bottom-style" />
                     <h:form> 
@@ -43,9 +43,9 @@
                         </h:panelGrid>
                         <h:panelGrid columns="2" id="input">
                             <p:outputLabel for="cats" value="Categoria: " />
-                            <p:selectOneMenu id="cats" value="#{oferecerBean.cadastrando.categoria}" converter="categoriaConverter">
+                            <p:selectOneMenu   id="cats" value="#{oferecerBean.cadastrando.categoria}" converter="categoriaConverter">
                                 <f:selectItem itemLabel="Selecione uma Categoria" itemValue="0" />
-                                <f:selectItems var="cat" value="#{oferecerBean.categoriasAtuais}" itemLabel="#{cat.descricao}"  itemValue="#{cat}" />
+                                <f:selectItems var="cat" binding="#{oferecerBean.select}" value="#{oferecerBean.categoriasAtuais}" itemLabel="#{cat.descricao}"  itemValue="#{cat}" />
                             </p:selectOneMenu>
                             <p:outputLabel value="Descrição:"/>
                             <p:inputText id="input-descricao" value="#{oferecerBean.cadastrando.descricao}" 	required="true"
@@ -63,6 +63,7 @@
                         </h:panelGrid>
                     </h:form>
                 </p:dialog>
+                <p:outputLabel rendered="false" value="No momento, não há uma cesta em andamento." binding="#{oferecerBean.label}"/>
             </ui:define>
         </ui:composition>
     </h:body>
