--- a/Software/web/home.xhtml
+++ b/Software/web/home.xhtml
@@ -15,68 +15,7 @@
                 Bem-vindo!
             </ui:define>
             <ui:define name="conteudo">
-                <h:form>
-                    <p:growl id="messages" showDetail="true" />
-                    <center>
-                        <h:panelGrid columnClasses="value">
-                            
-
-                            
-                            <h3>Programação Trimestre</h3>
-                            <p:schedule value="#{scheduleView.lazyEventModel}" />
-                        </h:panelGrid>
-
-                        <p:dialog widgetVar="eventDialog" header="Event Details" showEffect="clip" hideEffect="clip">
-                            <h:panelGrid id="eventDetails" columns="2">
-                                <p:outputLabel for="title" value="Titles:" />
-                                <p:inputText id="title" value="#{scheduleView.event.title}" required="true" />
-
-                                <p:outputLabel for="from" value="From:" />
-                                <p:calendar id="from" value="#{scheduleView.event.startDate}" timeZone="GMT+2" pattern="dd/MM/yyyy HH:mm"/>
-
-                                <p:outputLabel for="to" value="To:" />
-                                <p:calendar id="to" value="#{scheduleView.event.endDate}" timeZone="GMT+2" pattern="dd/MM/yyyy HH:mm"/>
-
-                                <p:outputLabel for="allDay" value="All Day:" />
-                                <h:selectBooleanCheckbox id="allDay" value="#{scheduleView.event.allDay}" />
-
-                                <p:commandButton type="reset" value="Reset" />
-                                <p:commandButton id="addButton" value="Save" actionListener="#{scheduleView.addEvent}" oncomplete="PF('myschedule').update();PF('eventDialog').hide();" />
-                            </h:panelGrid>
-
-                        </p:dialog> 
-                    </center>
-                </h:form>
-
-                <script type="text/javascript">
-                    PrimeFaces.locales['tr'] = {
-                        closeText: 'kapat',
-                        prevText: 'geri',
-                        nextText: 'ileri',
-                        currentText: 'bugün',
-                        monthNames: ['Ocak', 'Şubat', 'Mart', 'Nisan', 'Mayıs', 'Haziran',
-                            'Temmuz', 'Ağustos', 'Eylül', 'Ekim', 'Kasım', 'Aralık'],
-                        monthNamesShort: ['Oca', 'Şub', 'Mar', 'Nis', 'May', 'Haz',
-                            'Tem', 'Ağu', 'Eyl', 'Eki', 'Kas', 'Ara'],
-                        dayNames: ['Pazar', 'Pazartesi', 'Salı', 'Çarşamba', 'Perşembe', 'Cuma', 'Cumartesi'],
-                        dayNamesShort: ['Pz', 'Pt', 'Sa', 'Ça', 'Pe', 'Cu', 'Ct'],
-                        dayNamesMin: ['Pz', 'Pt', 'Sa', 'Ça', 'Pe', 'Cu', 'Ct'],
-                        weekHeader: 'Hf',
-                        firstDay: 1,
-                        isRTL: false,
-                        showMonthAfterYear: false,
-                        yearSuffix: '',
-                        month: 'Ay',
-                        week: 'Hafta',
-                        day: 'Gün',
-                        allDayText: 'Tüm Gün'
-                    };
-                </script>
-                <style type="text/css">
-                    .value {
-                        width: 1000px;
-                    }
-                </style>
+                <h3>Seja bem vindo ao sistema!</h3>
             </ui:define>
         </ui:composition>
     </h:body>
